# PacketMaker

./: CMakeLists.txt  README.md
Test/: PacketMakerTest.cpp
src/: FunctionObject.hpp  PacketMaker.hpp
src/FunctionObjects/: CurrentLength.hpp  DelayedEvaluation.hpp  FunctionObject.hpp  TotalLength.hpp
